--- a/src/Home/home.css
+++ b/src/Home/home.css
@@ -9,7 +9,9 @@
 }
 .nav-bar{
     height: 100vh;
-    width: 20%;
+    width: 18%;
+    position: fixed;
+    box-shadow: 5px 0px 10px rgba(0, 0, 0, 0.1);
 }
 .main-nav{
     display: flex;
@@ -23,4 +25,49 @@
     margin-left: 20%;
     margin-right: 3%;
     justify-content: space-between;
+}
+.h1main{
+    margin-top: 2%;
+    font-size: 1.5rem;
+    color:#123C69;
+    font-weight: 800;
+}
+.linklu{
+    font-size: 1.1rem;
+    font-weight: 700;
+    text-decoration: none;
+    color:  #AC3B61;
+}
+.linklu:hover{
+    text-decoration: underline;
+    text-underline-offset: 0.5em;
+    text-decoration-skip-ink: none;
+    color:#123C69;
+    transition: color 0.5s ease-in-out;
+}
+.block{
+    width: 40%;
+    margin-left: 23%;
+}
+.div3{
+    width: 30%;
+    margin-left: 4%;
+    position: fixed;
+    right: 1%; /* Adjust distance from the right side of the screen */
+}
+.h2upd{
+    margin-top: 3%;
+    color:#123C69;
+    font-weight: 800;
+} 
+.h3head{
+    margin-top: 3%;
+    color:#AC3B61;
+    font-size: 1.18rem;
+    font-weight: 700;
+}
+p{
+    color: #555;
+    font-weight: 500;
+    line-height: 1.5rem;
 }
