--- a/src/Posts/card.css
+++ b/src/Posts/card.css
@@ -1,7 +1,7 @@
 .card {
     border: 1px solid #dbdbdb;
     border-radius: 8px;
-    width: 300px;
+    width: 100%;
     margin: 20px auto;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
@@ -40,4 +40,4 @@
 .loading{
     margin-top: 10%;
     font-size: 2.5rem;
-}  
+} 
