--- a/src/Posts/card.css
+++ b/src/Posts/card.css
@@ -1,43 +1,53 @@
 .card {
-    border: 1px solid #dbdbdb;
-    border-radius: 8px;
-    width: 100%;
-    margin: 20px auto;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    background-color: #fff;
-  }
-  
-  .card-header {
-    padding: 10px;
-    border-bottom: 1px solid #dbdbdb;
-    display: flex;
-    align-items: center;
-  }
-  
-  .card-username {
-    font-size: 16px;
-    font-weight: bold;
-  }
-  
-  .card-body {
-    text-align: center;
-  }
-  
-  .card-image {
-    width: 100%;
-    height: auto;
-  }
-  
-  .card-footer {
-    padding: 10px;
-  }
-  
-  .card-description {
-    font-size: 14px;
-    color: #555;
-  }
-.loading{
-    margin-top: 10%;
-    font-size: 2.5rem;
-} 
+  border: 1px solid #dbdbdb;
+  border-radius: 8px;
+  width: 100%;
+  margin: 20px auto;
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  background-color: #fff;
+}
+
+.card-header {
+  background-color: white;
+  padding: 10px;
+  border-bottom: 1px solid #dbdbdb;
+  display: flex;
+  align-items: center;
+}
+
+.card-username {
+  background-color: white;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.card-body {
+  text-align: center;
+  padding: 0;
+}
+
+.card-image {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.card-description {
+  background-color: white;
+  font-size: 1rem;
+  color: #123C69;
+  font-weight: 500;
+  padding: 2%;
+  margin: 0; 
+}
+
+.loading {
+  margin-top: 10%;
+  font-size: 2.5rem;
+}
+
+.user-icon {
+  margin-right: 8px;
+  background-color: white;
+}
